Better Main Page + Started On The Main Parse Thingy

--- a/index.html
+++ b/index.html
@@ -2,13 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>The AP Options Parser</title>
+    <title>Command Center</title>
 </head>
 <body>
 
-<input type="file" id="input">
-<p id="output"></p>
+<miku>
+    <h1>It's Me, Hatsune Miku! Welcome To My Website!</h1>
+    <img src="assets/placeholders/miku.gif" alt="Hatsune Miku Dancing">
+</miku>
+<ap>
+    <h3>Generate Archipelago YAMLs For Select Unsupported Games Here!</h3>
+    <a href="apParser.html"><button>YAML Generator</button></a>
+</ap>
 
 </body>
-<script src="script/parse.js"></script>
 </html>
