Will Github Make Me Sad?

--- a/apParser.html
+++ b/apParser.html
@@ -10,7 +10,7 @@
     <select id="gameChooser">Select A Game</select>
     <button id="gameSubmit" onclick="parseOptionFile()">Submit</button>
 </div>
-<p id="output"></p>
+<div id="output"></div>
 
 </body>
 <script src="script/getGames.js"></script>
