Ranges And Toggle Now Read And Render

--- a/apParser.html
+++ b/apParser.html
@@ -11,6 +11,7 @@
     <button id="gameSubmit" onclick="parseOptionFile()">Submit</button>
 </div>
 <p id="output"></p>
+<options id="optionsDiv"></options>
 
 </body>
 <script src="script/getGames.js"></script>
