--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Command Center</title>
+    <link rel="stylesheet" href="style/mikuMode.css">
 </head>
 <body>
 
 <miku>
     <h1>It's Me, Hatsune Miku! Welcome To My Website!</h1>
-    <img src="assets/placeholders/miku.gif" alt="Hatsune Miku Dancing">
 </miku>
 <ap>
     <h3>Generate Archipelago YAMLs For Select Unsupported Games Here!</h3>
