Random Button And *gasp* Styling!

--- a/apParser.html
+++ b/apParser.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>The AP Options Parser</title>
+    <link rel="stylesheet", href="style/apParserPage.css">
 </head>
 <body>
 
