Github Pages Works Now

--- a/apParser.html
+++ b/apParser.html
@@ -38,9 +38,9 @@
             Minimal: ensure what is needed to reach your goal can be acquired.
         </p>
         <select class="choice">
-            <option>Locations</option>
-            <option selected>Items</option>
-            <option>Minimal</option>
+            <option>locations</option>
+            <option selected>items</option>
+            <option>minimal</option>
         </select>
         <div class="random">
             <p>Random</p>
