New Shiny Download Button

--- a/apParser.html
+++ b/apParser.html
@@ -51,8 +51,10 @@
 <options id="optionsDiv"></options>
 <button onclick="generate()">Generate</button>
 <pre><p id="output"></p></pre>
+<button onclick="download()">Download File</button>
 
 </body>
 <script src="script/getGames.js"></script>
 <script src="script/parseOptionFile.js"></script>
+<script src="script/download.js"></script>
 </html>
