Miku Mode Is Now Cookies

--- a/apParser.html
+++ b/apParser.html
@@ -6,7 +6,6 @@
     <link rel="stylesheet", href="style/apParserPage.css">
 </head>
 <body>
-
 <div>
     <select id="gameChooser">Select A Game</select>
     <button id="gameSubmit" onclick="parseOptionFile()">Submit</button>
@@ -57,4 +56,5 @@
 <script src="script/getGames.js"></script>
 <script src="script/parseOptionFile.js"></script>
 <script src="script/download.js"></script>
+<script src="script/activateMikuMode.js"></script>
 </html>
