--- a/index.html
+++ b/index.html
@@ -5,16 +5,31 @@
     <title>Command Center</title>
 </head>
 <body>
-
-<miku>
-    <h1 id="introHeader">It's Me, Command! Welcome To My Website!</h1>
+<h1 id="introHeader">It's Me, Command! Welcome To My Website!</h1>
+<div>
+    <a href="changelog.html"><button>Changelog</button></a>
     <button onclick="activateMikuMode()" id="mikuModeButton">Activate Miku Mode</button>
-</miku>
+</div>
 <ap>
     <h3>Generate Archipelago YAMLs For Select Unsupported Games Here!</h3>
     <a href="apParser.html"><button>YAML Generator</button></a>
 </ap>
 
+<stella>
+    <h3>This Site Is Part Of The <a href="https://stellaring.network">Stella Web Ring</a> (Somehow)</h3>
+    <div>
+        <a href="https://silvershorthair.github.io/"><img src="https://silvershorthair.github.io/Assets/Silvbutton2.png"></a>
+        <a href="https://skysupercharged.github.io/"><img src="https://skysupercharged.github.io/skysiteresources/skybutton.png"></a>
+        <a href="https://hiyaderred.github.io/"><img src="https://hiyaderred.github.io/images/webring/derredbutton.png"></a>
+        <a href="https://xzan-corvus.github.io/"><img src="https://xzan-corvus.github.io/Xzan_and_Proto.gif"></a>
+    </div>
+    <div>
+        <a href="https://gumi.gay/"><img src="https://gumi.gay/logo.gif"></a>
+        <a href="https://miastonished.github.io/"><img src="https://miastonished.github.io/assets/buttons/button.gif"></a>
+        <a href="https://vaelaris.github.io/"><img src="https://vaelaris.github.io/weringbutton.png"></a>
+        <a href="https://fabledbugs.github.io/"><img src="https://fabledbugs.github.io/bugsite.png"></a>
+    </div>
+</stella>
 </body>
 </html>
 <script src="script/activateMikuMode.js"></script>
