--- a/apParser.html
+++ b/apParser.html
@@ -25,7 +25,7 @@
             <p class = sliderDisp id="progbalDisp"></p>
         </div>
         <div class="random">
-            <p>Random</p>
+            <p class="randomText">Random</p>
             <input class="randomButton" type="checkbox">
         </div>
     </div>
@@ -42,7 +42,7 @@
             <option>minimal</option>
         </select>
         <div class="random">
-            <p>Random</p>
+            <p class="randomText">Random</p>
             <input class="randomButton" type="checkbox">
         </div>
     </div>
