Protecting Users On The AP Parser

--- a/apParser.html
+++ b/apParser.html
@@ -48,9 +48,9 @@
     </div>
 </options>
 <options id="optionsDiv"></options>
-<button onclick="generate()">Generate</button>
-<pre><p id="output"></p></pre>
-<button onclick="download()">Download File</button>
+<button id="generate" hidden="hidden" onclick="generate()">Generate</button>
+<pre><p id="output" hidden="hidden"></p></pre>
+<button id="download" hidden="hidden" onclick="download()">Download File</button>
 
 </body>
 <script src="script/getGames.js"></script>
