--- a/changelog.html
+++ b/changelog.html
@@ -10,6 +10,12 @@
     <h1>Changelog</h1>
 </header>
 <div>
+    <h3>3/11/24</h3>
+    <p>(10:03 AM EST) - Made the buttons on the AP Parser page only appear when they should be pressed. You can
+    no longer generate a yaml before selecting a game, download a YAML before generating it, or generate a YAML
+    without selecting a slot name.</p>
+</div>
+<div>
     <h3>3/10/24</h3>
     <p>(9:54 PM EST) - Added a lot this commit. Officially joined the Stella Ring yesterday so I added the links for the other people. I updated some of my
     CSS, and added this very page.</p>
