Started Taiko Manual Tracker

--- a/changelog.html
+++ b/changelog.html
@@ -10,6 +10,12 @@
     <h1>Changelog</h1>
 </header>
 <div>
+    <h3>3/12/24</h3>
+    <p>(9:54 AM EST) - Started work on the Taiko AP tracker page. The use for it is very simple, show me what
+    songs I can currently send out for my Taiko manual. All the page has currently is a system that connects,
+    But hopefully I can get a full tracker soon.</p>
+</div>
+<div>
     <h3>3/11/24</h3>
     <p>(10:03 AM EST) - Made the buttons on the AP Parser page only appear when they should be pressed. You can
     no longer generate a yaml before selecting a game, download a YAML before generating it, or generate a YAML
