Taiko Location Lister

--- a/changelog.html
+++ b/changelog.html
@@ -14,6 +14,8 @@
     <p>(9:54 AM EST) - Started work on the Taiko AP tracker page. The use for it is very simple, show me what
     songs I can currently send out for my Taiko manual. All the page has currently is a system that connects,
     But hopefully I can get a full tracker soon.</p>
+    <p>(10:25 AM EST) - The Taiko AP tracker page now lists out all unique unplayed songs. Soon it will only
+        display the ones</p>
 </div>
 <div>
     <h3>3/11/24</h3>
