--- a/taikoAPTracker.html
+++ b/taikoAPTracker.html
@@ -20,6 +20,8 @@
     </div>
     <button id="connectButton">Connect</button>
 </div>
+<p id="locations"></p>
+<button id="updateButton" hidden="hidden">Update</button>
 </body>
 <script src="script/activateMikuMode.js"></script>
 <script type="module" src="script/taikoAPTracker.js"></script>
