Taiko AP Tracker Working?

--- a/changelog.html
+++ b/changelog.html
@@ -16,6 +16,8 @@
     But hopefully I can get a full tracker soon.</p>
     <p>(10:25 AM EST) - The Taiko AP tracker page now lists out all unique unplayed songs. Soon it will only
         display the ones</p>
+    <p>(12:06 PM EST) - The Taiko AP tracker now only displays the songs you have
+    the items for (hypothetically, I can't check until I get home)</p>
 </div>
 <div>
     <h3>3/11/24</h3>
