Taiko Tracker Styling

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 <ap>
     <h3>Generate Archipelago YAMLs For Select Unsupported Games Here!</h3>
     <a href="apParser.html"><button>YAML Generator</button></a>
+    <h3>Want To Track Your Taiko Manual? You Can Do That Here Too!</h3>
+    <a href="taikoAPTracker.html"><button>Taiko AP Tracker</button></a>
 </ap>
 
 <stella>
