--- a/changelog.html
+++ b/changelog.html
@@ -12,12 +12,13 @@
 <div>
     <h3>3/12/24</h3>
     <p>(9:54 AM EST) - Started work on the Taiko AP tracker page. The use for it is very simple, show me what
-    songs I can currently send out for my Taiko manual. All the page has currently is a system that connects,
-    But hopefully I can get a full tracker soon.</p>
+        songs I can currently send out for my Taiko manual. All the page has currently is a system that connects,
+        But hopefully I can get a full tracker soon.</p>
     <p>(10:25 AM EST) - The Taiko AP tracker page now lists out all unique unplayed songs. Soon it will only
         display the ones</p>
     <p>(12:06 PM EST) - The Taiko AP tracker now only displays the songs you have
-    the items for (hypothetically, I can't check until I get home)</p>
+        the items for (hypothetically, I can't check until I get home)</p>
+    <p>(8:01 PM EST) - The Taiko AP tracker does have full basic functions! I just added some styling so it looks better here.</p>
 </div>
 <div>
     <h3>3/11/24</h3>
