Started Expanding Taiko Tracker

--- a/changelog.html
+++ b/changelog.html
@@ -10,6 +10,11 @@
     <h1>Changelog</h1>
 </header>
 <div>
+    <h3>3/13/24</h3>
+    <p>(10:11 AM EST) - Started expanding the functionality of the Taiko AP tracker based on what I wanted from it
+    while testing. Specifically, I started the feature of sending checks out from the tracker.</p>
+</div>
+<div>
     <h3>3/12/24</h3>
     <p>(9:54 AM EST) - Started work on the Taiko AP tracker page. The use for it is very simple, show me what
         songs I can currently send out for my Taiko manual. All the page has currently is a system that connects,
