--- a/taikoAPTracker.html
+++ b/taikoAPTracker.html
@@ -27,7 +27,7 @@
 </div>
 <center>
     <button id="updateButton" hidden="hidden">Update</button>
-    <p id="locations"></p>
+    <div id="locations"></div>
 </center>
 </body>
 <script src="script/activateMikuMode.js"></script>
