--- a/changelog.html
+++ b/changelog.html
@@ -13,6 +13,7 @@
     <h3>3/13/24</h3>
     <p>(10:11 AM EST) - Started expanding the functionality of the Taiko AP tracker based on what I wanted from it
     while testing. Specifically, I started the feature of sending checks out from the tracker.</p>
+    <p>(10:20 AM EST) - Made the send check buttons hypothetically work.</p>
 </div>
 <div>
     <h3>3/12/24</h3>
