--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head id="head">
     <meta charset="UTF-8">
     <title>Command Center</title>
+    <link rel="stylesheet" href="style/index.css">
 </head>
 <body>
 <h1 id="introHeader">It's Me, Command! Welcome To My Website!</h1>
@@ -19,18 +20,20 @@
 
 <stella>
     <h3>This Site Is Part Of The <a href="https://stellaring.network">Stella Web Ring</a> (Somehow)</h3>
-    <div>
+    <a class="floatLeft" href="https://stellaring.network/previous/"><</a>
+    <div class="floatLeft">
         <a href="https://silvershorthair.github.io/"><img src="https://silvershorthair.github.io/Assets/Silvbutton2.png"></a>
         <a href="https://skysupercharged.github.io/"><img src="https://skysupercharged.github.io/skysiteresources/skybutton.png"></a>
         <a href="https://hiyaderred.github.io/"><img src="https://hiyaderred.github.io/images/webring/derredbutton.png"></a>
         <a href="https://xzan-corvus.github.io/"><img src="https://xzan-corvus.github.io/Xzan_and_Proto.gif"></a>
     </div>
-    <div>
+    <div class="floatLeft" id="row2">
         <a href="https://gumi.gay/"><img src="https://gumi.gay/logo.gif"></a>
         <a href="https://miastonished.github.io/"><img src="https://miastonished.github.io/assets/buttons/button.gif"></a>
         <a href="https://vaelaris.github.io/"><img src="https://vaelaris.github.io/weringbutton.png"></a>
         <a href="https://fabledbugs.github.io/"><img src="https://fabledbugs.github.io/bugsite.png"></a>
     </div>
+    <a class="floatLeft" href="https://stellaring.network/next/">></a>
 </stella>
 </body>
 </html>
