--- a/changelog.html
+++ b/changelog.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title></title>
-    <link rel="stylesheet", href="style/changelog.css">
+    <link rel="stylesheet" href="style/changelog.css">
 </head>
 <body>
 <header>
