--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </ap>
 
 <stella>
-    <h3>This Site Is Part Of The <a href="https://stellaring.network">Stella Web Ring</a> (Somehow)</h3>
+    <h3>This Site Is Part Of The <a href="https://stellaring.network">Stella Ring</a> (Somehow)</h3>
     <a class="floatLeft" href="https://stellaring.network/previous/"><</a>
     <div class="floatLeft">
         <a href="https://silvershorthair.github.io/"><img src="https://silvershorthair.github.io/Assets/Silvbutton2.png"></a>
