--- a/idleGame.html
+++ b/idleGame.html
@@ -80,7 +80,7 @@
         <h1 id="poundsDisplay">£</h1>
         <select id="targetSelect">
             <option selected>The Bank</option>
-            <!-- <option>Contract</option> -->
+            <option>Contract</option>
         </select>
         <meter value="0" min="0" max="60" id="hackProgress"></meter>
         <button onclick="hack()" id="theHackButton">
@@ -89,7 +89,7 @@
     </div>
 </div>
 
-<div class="hackWindow" id="hackContractsWindow" style="left: 1300px" hidden="hidden">
+<div class="hackWindow" id="hackContractsWindow" style="left: 1300px">
     <div style="width: 300px; height: 10px" class="hackTab" id="hackContractsWindowTab"></div>
     <div style="width: 300px; height: 350px; top: 10px" class="hackContent">
         <h3 style="float: right" id="contractReward">¥X</h3>
